Bug 338832 - Ctrl+Shift+Insert shortcut does not insert a new line in Table Design View
Summary: Ctrl+Shift+Insert shortcut does not insert a new line in Table Design View
Status: CLOSED FIXED
Alias: None
Product: KEXI
Classification: Applications
Component: Tables (other bugs)
Version First Reported In: 2.9 Alpha
Platform: Mint (Ubuntu based) Linux
: NOR minor
Target Milestone: 2.9.9
Assignee: Jarosław Staniek
URL:
Keywords: junior-jobs
Depends on:
Blocks: 338833
  Show dependency treegraph
 
Reported: 2014-09-05 21:02 UTC by Ian Balchin
Modified: 2019-02-18 19:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.9
Sentry Crash Report:
staniek: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Balchin 2014-09-05 21:02:36 UTC
The key shortcut Ctl+Shift+Insert should insert a new row in the Table Design view. This shortcut is indicated on the right-click menu.

Reproducible: Always

Steps to Reproduce:
1. Open a Table
2. Move into Design mode
3. Use the mouse to position yourself in the middle of the table
4. Press Ctl+Shift+Insert

Actual Results:  
Nothing happens

Expected Results:  
A new blank line to be inserted.

Similar issue with a Query, but I will do a separate bug for this.

The function does work from the right-click menu.
Comment 1 Jarosław Staniek 2015-10-31 20:27:55 UTC
Git commit d1a760f76596306e2a26510352292397eb334798 by Jaroslaw Staniek.
Committed on 31/10/2015 at 20:24.
Pushed by staniek into branch 'calligra/2.9'.

Kexi: Make Ctrl+Shift+Insert shortcut insert a new line in Table Designer

FIXED-IN:2.9.9

M  +2    -1    kexi/widget/tableview/KexiTableScrollArea.cpp

http://commits.kde.org/calligra/d1a760f76596306e2a26510352292397eb334798
Comment 2 Jarosław Staniek 2015-10-31 20:34:22 UTC
Git commit d56f72e3f8f26676b3d315f6006a203748299029 by Jaroslaw Staniek.
Committed on 31/10/2015 at 20:31.
Pushed by staniek into branch 'master'.

Kexi: Make Ctrl+Shift+Insert shortcut insert a new line in Table Designer

FIXED-IN:2.9.9

M  +2    -1    kexi/widget/tableview/KexiTableScrollArea.cpp

http://commits.kde.org/calligra/d56f72e3f8f26676b3d315f6006a203748299029