Kexi: Make Ctrl+Shift+Insert shortcut insert a new line in Table Designer

BUG:338832

FIXED-IN:2.9.9